fix dependencies problem

--- a/pkg/kubectl/cmd/BUILD
+++ b/pkg/kubectl/cmd/BUILD
@@ -10,10 +10,6 @@ go_library(
         "alpha.go",
         "annotate.go",
         "apiversions.go",
-        "apply.go",
-        "apply_edit_last_applied.go",
-        "apply_set_last_applied.go",
-        "apply_view_last_applied.go",
         "attach.go",
         "autoscale.go",
         "certificates.go",
@@ -23,21 +19,6 @@ go_library(
         "completion.go",
         "convert.go",
         "cp.go",
-        "create.go",
-        "create_clusterrole.go",
-        "create_clusterrolebinding.go",
-        "create_configmap.go",
-        "create_deployment.go",
-        "create_job.go",
-        "create_namespace.go",
-        "create_pdb.go",
-        "create_priorityclass.go",
-        "create_quota.go",
-        "create_role.go",
-        "create_rolebinding.go",
-        "create_secret.go",
-        "create_service.go",
-        "create_serviceaccount.go",
         "delete.go",
         "describe.go",
         "diff.go",
@@ -59,9 +40,6 @@ go_library(
         "run.go",
         "scale.go",
         "taint.go",
-        "top.go",
-        "top_node.go",
-        "top_pod.go",
         "version.go",
     ],
     importpath = "k8s.io/kubernetes/pkg/kubectl/cmd",
@@ -73,22 +51,22 @@ go_library(
         "//pkg/apis/certificates:go_default_library",
         "//pkg/apis/core:go_default_library",
         "//pkg/apis/core/validation:go_default_library",
-        "//pkg/client/clientset_generated/internalclientset:go_default_library",
         "//pkg/client/clientset_generated/internalclientset/typed/core/internalversion:go_default_library",
         "//pkg/kubectl:go_default_library",
         "//pkg/kubectl/apply/parse:go_default_library",
         "//pkg/kubectl/apply/strategy:go_default_library",
+        "//pkg/kubectl/cmd/apply:go_default_library",
         "//pkg/kubectl/cmd/auth:go_default_library",
         "//pkg/kubectl/cmd/config:go_default_library",
+        "//pkg/kubectl/cmd/create:go_default_library",
         "//pkg/kubectl/cmd/resource:go_default_library",
         "//pkg/kubectl/cmd/rollout:go_default_library",
         "//pkg/kubectl/cmd/set:go_default_library",
         "//pkg/kubectl/cmd/templates:go_default_library",
+        "//pkg/kubectl/cmd/top:go_default_library",
         "//pkg/kubectl/cmd/util:go_default_library",
         "//pkg/kubectl/cmd/util/editor:go_default_library",
-        "//pkg/kubectl/cmd/util/openapi:go_default_library",
         "//pkg/kubectl/explain:go_default_library",
-        "//pkg/kubectl/metricsutil:go_default_library",
         "//pkg/kubectl/plugins:go_default_library",
         "//pkg/kubectl/proxy:go_default_library",
         "//pkg/kubectl/resource:go_default_library",
@@ -116,7 +94,6 @@ go_library(
         "//vendor/k8s.io/api/core/v1:go_default_library",
         "//vendor/k8s.io/api/extensions/v1beta1:go_default_library",
         "//vendor/k8s.io/api/policy/v1beta1:go_default_library",
-        "//vendor/k8s.io/api/rbac/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/api/meta:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
@@ -129,8 +106,6 @@ go_library(
         "//vendor/k8s.io/apimachinery/pkg/util/errors:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/util/intstr:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/util/json:go_default_library",
-        "//vendor/k8s.io/apimachinery/pkg/util/jsonmergepatch:go_default_library",
-        "//vendor/k8s.io/apimachinery/pkg/util/mergepatch:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/util/net:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/util/sets:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/util/strategicpatch:go_default_library",
@@ -140,21 +115,12 @@ go_library(
         "//vendor/k8s.io/apimachinery/pkg/version:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/watch:go_default_library",
         "//vendor/k8s.io/apiserver/pkg/util/flag:go_default_library",
-        "//vendor/k8s.io/client-go/discovery:go_default_library",
         "//vendor/k8s.io/client-go/kubernetes:go_default_library",
-        "//vendor/k8s.io/client-go/kubernetes/typed/batch/v1:go_default_library",
-        "//vendor/k8s.io/client-go/kubernetes/typed/core/v1:go_default_library",
-        "//vendor/k8s.io/client-go/kubernetes/typed/rbac/v1:go_default_library",
         "//vendor/k8s.io/client-go/rest:go_default_library",
-        "//vendor/k8s.io/client-go/scale:go_default_library",
         "//vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
         "//vendor/k8s.io/client-go/tools/portforward:go_default_library",
         "//vendor/k8s.io/client-go/tools/remotecommand:go_default_library",
         "//vendor/k8s.io/client-go/transport/spdy:go_default_library",
-        "//vendor/k8s.io/kube-openapi/pkg/util/proto:go_default_library",
-        "//vendor/k8s.io/metrics/pkg/apis/metrics:go_default_library",
-        "//vendor/k8s.io/metrics/pkg/apis/metrics/v1beta1:go_default_library",
-        "//vendor/k8s.io/metrics/pkg/client/clientset_generated/clientset:go_default_library",
         "//vendor/k8s.io/utils/exec:go_default_library",
     ],
 )
@@ -163,27 +129,11 @@ go_test(
     name = "go_default_test",
     srcs = [
         "annotate_test.go",
-        "apply_test.go",
         "attach_test.go",
         "clusterinfo_dump_test.go",
         "cmd_test.go",
         "convert_test.go",
         "cp_test.go",
-        "create_clusterrole_test.go",
-        "create_clusterrolebinding_test.go",
-        "create_configmap_test.go",
-        "create_deployment_test.go",
-        "create_job_test.go",
-        "create_namespace_test.go",
-        "create_pdb_test.go",
-        "create_priorityclass_test.go",
-        "create_quota_test.go",
-        "create_role_test.go",
-        "create_rolebinding_test.go",
-        "create_secret_test.go",
-        "create_service_test.go",
-        "create_serviceaccount_test.go",
-        "create_test.go",
         "delete_test.go",
         "describe_test.go",
         "diff_test.go",
@@ -200,9 +150,6 @@ go_test(
         "rollingupdate_test.go",
         "run_test.go",
         "taint_test.go",
-        "top_node_test.go",
-        "top_pod_test.go",
-        "top_test.go",
     ],
     data = [
         "testdata",
@@ -223,7 +170,6 @@ go_test(
         "//pkg/kubectl/cmd/resource:go_default_library",
         "//pkg/kubectl/cmd/testing:go_default_library",
         "//pkg/kubectl/cmd/util:go_default_library",
-        "//pkg/kubectl/cmd/util/openapi:go_default_library",
         "//pkg/kubectl/plugins:go_default_library",
         "//pkg/kubectl/resource:go_default_library",
         "//pkg/kubectl/scheme:go_default_library",
@@ -231,23 +177,13 @@ go_test(
         "//pkg/kubectl/util/term:go_default_library",
         "//pkg/printers:go_default_library",
         "//pkg/util/strings:go_default_library",
-        "//vendor/github.com/googleapis/gnostic/OpenAPIv2:go_default_library",
         "//vendor/github.com/spf13/cobra:go_default_library",
-        "//vendor/github.com/stretchr/testify/assert:go_default_library",
         "//vendor/gopkg.in/yaml.v2:go_default_library",
-        "//vendor/k8s.io/api/autoscaling/v1:go_default_library",
-        "//vendor/k8s.io/api/batch/v1:go_default_library",
-        "//vendor/k8s.io/api/batch/v1beta1:go_default_library",
         "//vendor/k8s.io/api/core/v1:go_default_library",
         "//vendor/k8s.io/api/policy/v1beta1:go_default_library",
-        "//vendor/k8s.io/api/rbac/v1:go_default_library",
-        "//vendor/k8s.io/api/rbac/v1beta1:go_default_library",
-        "//vendor/k8s.io/apimachinery/pkg/api/equality:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/api/meta:go_default_library",
-        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
-        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1/unstructured:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
@@ -255,19 +191,11 @@ go_test(
         "//vendor/k8s.io/apimachinery/pkg/util/intstr:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/util/sets:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/util/strategicpatch:go_default_library",
-        "//vendor/k8s.io/apimachinery/pkg/util/strategicpatch/testing:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/util/wait:go_default_library",
-        "//vendor/k8s.io/apimachinery/pkg/version:go_default_library",
         "//vendor/k8s.io/client-go/dynamic:go_default_library",
-        "//vendor/k8s.io/client-go/kubernetes/fake:go_default_library",
         "//vendor/k8s.io/client-go/rest:go_default_library",
         "//vendor/k8s.io/client-go/rest/fake:go_default_library",
-        "//vendor/k8s.io/client-go/scale/fake:go_default_library",
-        "//vendor/k8s.io/client-go/testing:go_default_library",
         "//vendor/k8s.io/client-go/tools/remotecommand:go_default_library",
-        "//vendor/k8s.io/metrics/pkg/apis/metrics/v1alpha1:go_default_library",
-        "//vendor/k8s.io/metrics/pkg/apis/metrics/v1beta1:go_default_library",
-        "//vendor/k8s.io/metrics/pkg/client/clientset_generated/clientset/fake:go_default_library",
         "//vendor/k8s.io/utils/exec:go_default_library",
     ],
 )
@@ -282,14 +210,17 @@ filegroup(
     name = "all-srcs",
     srcs = [
         ":package-srcs",
+        "//pkg/kubectl/cmd/apply:all-srcs",
         "//pkg/kubectl/cmd/auth:all-srcs",
         "//pkg/kubectl/cmd/config:all-srcs",
+        "//pkg/kubectl/cmd/create:all-srcs",
         "//pkg/kubectl/cmd/resource:all-srcs",
         "//pkg/kubectl/cmd/rollout:all-srcs",
         "//pkg/kubectl/cmd/set:all-srcs",
         "//pkg/kubectl/cmd/templates:all-srcs",
         "//pkg/kubectl/cmd/testdata/edit:all-srcs",
         "//pkg/kubectl/cmd/testing:all-srcs",
+        "//pkg/kubectl/cmd/top:all-srcs",
         "//pkg/kubectl/cmd/util:all-srcs",
     ],
     tags = ["automanaged"],
